--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,5 @@
 
-#TODO: add two other projects
+#TODO: Add shadows to project tiles
 #TODO: create media queries for phone compatibility
 #TODO: Add condensed nav menu
 #TODO: Add animations to welcome text
